--- a/index.html
+++ b/index.html
@@ -146,32 +146,46 @@
     </section>
 
 
-    <section>
-        <h3>Nuestro Blog</h3>
+    <div class="seccion-inferior contenedor seccion">
+        <section class="blog">
+            <h3 class="centrar-texto fw-300">Nuestro Blog</h3>
 
-        <article>
-            <img src="img/blog1.jpg" alt="Entrada de blog">
-            <h4>Terraza en el techo de tu casa</h4>
-            <p>Escrito el: <em> 20/10/2019 </em> por: <em> Admin </em> </p>
-            <p>Consejos para construir una terraza en el techo de tu casa, con los mejores materiales u ahorrando dinero.</p>
-        </article>
+            <article class="entrada-blog">
+                <div class="imagen">
+                    <img src="img/blog1.jpg" alt="Entrada de blog">
+                </div>
+                <div class="texto-entrada">
+                    <a href="#">
+                        <h4>Terraza en el techo de tu casa</h4>
+                    </a>
+                    <p>Escrito el: <span> 20/10/2019 </span> por: <span> Admin </span> </p>
+                    <p>Consejos para construir una terraza en el techo de tu casa, con los mejores materiales u ahorrando dinero.</p>
+                </div>
+            </article>
 
-        <article>
-            <img src="img/blog2.jpg" alt="Entrada de blog">
-            <h4>Guia para la decoración de tu hogar</h4>
-            <p>Escrito el: <em> 20/10/2019 </em> por: <em> Admin </em></p>
-            <p>Maximiza el espacio en tu hogar con esta guía, aprende a combinar muebles y colores para dar vida a tu espacio.</p>
-        </article>
-    </section>
+            <article class="entrada-blog">
+                <div class="imagen">
+                    <img src="img/blog2.jpg" alt="Entrada de blog">
+                </div>
+                <div class="texto-entrada">
+                    <a href="#">
+                        <h4>Guia para la decoración de tu hogar</h4>
+                    </a>
+                    <p>Escrito el: <span> 20/10/2019 </span> por: <span> Admin </span></p>
+                    <p>Maximiza el espacio en tu hogar con esta guía, aprende a combinar muebles y colores para dar vida a tu espacio.</p>
+                </div>
+            </article>
+        </section>
 
 
-    <section>        
-        <h3>Testimoniales</h3>
-        <blockquote>
-            El personal se comportó de una excelente forma, muy buena atención y la casa que me ofrecieron cumple con todas mis expectativas.
-        </blockquote>
-        <p>- Randy Alcala</p>
-    </section>
+        <section class="testimoniales">        
+            <h3 class="centrar-texto fw-300">Testimoniales</h3>
+            <blockquote>
+                El personal se comportó de una excelente forma, muy buena atención y la casa que me ofrecieron cumple con todas mis expectativas.
+            </blockquote>
+            <p>- Randy Alcala</p>
+        </section>
+    </div>
 
 
     <footer>
