seccion testimoniales, html y css terminado

--- a/index.html
+++ b/index.html
@@ -180,10 +180,12 @@
 
         <section class="testimoniales">        
             <h3 class="centrar-texto fw-300">Testimoniales</h3>
-            <blockquote>
-                El personal se comportó de una excelente forma, muy buena atención y la casa que me ofrecieron cumple con todas mis expectativas.
-            </blockquote>
-            <p>- Randy Alcala</p>
+            <div class="testimonial">
+                <blockquote>
+                    El personal se comportó de una excelente forma, muy buena atención y la casa que me ofrecieron cumple con todas mis expectativas.
+                </blockquote>
+                <p>- Randy Alcala</p>
+            </div>
         </section>
     </div>
 
