--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                             <p>4</p>
                         </li>
                     </ul>
-                    <a href="#" class="boton boton-amarillo d-block">Ver Propiedad</a>
+                    <a href="anuncio.html" class="boton boton-amarillo d-block">Ver Propiedad</a>
                 </div>
             </div>
 
@@ -102,7 +102,7 @@
                             <p>4</p>
                         </li>
                     </ul>
-                    <a href="#" class="boton boton-amarillo d-block">Ver Propiedad</a>
+                    <a href="anuncio.html" class="boton boton-amarillo d-block">Ver Propiedad</a>
                 </div>
             </div>
 
@@ -126,7 +126,7 @@
                             <p>4</p>
                         </li>
                     </ul>
-                    <a href="#" class="boton boton-amarillo d-block">Ver Propiedad</a>
+                    <a href="anuncio.html" class="boton boton-amarillo d-block">Ver Propiedad</a>
                 </div>
             </div>
         </div>
@@ -155,7 +155,7 @@
                     <img src="img/blog1.jpg" alt="Entrada de blog">
                 </div>
                 <div class="texto-entrada">
-                    <a href="#">
+                    <a href="entrada.html">
                         <h4>Terraza en el techo de tu casa</h4>
                     </a>
                     <p>Escrito el: <span> 20/10/2019 </span> por: <span> Admin </span> </p>
@@ -168,7 +168,7 @@
                     <img src="img/blog2.jpg" alt="Entrada de blog">
                 </div>
                 <div class="texto-entrada">
-                    <a href="#">
+                    <a href="entrada.html">
                         <h4>Guia para la decoración de tu hogar</h4>
                     </a>
                     <p>Escrito el: <span> 20/10/2019 </span> por: <span> Admin </span></p>
